# trading_agent

./: .env.example  =3.0.0  AGENTS.md  LICENSE  README.md  pyproject.toml
.sisyphus/plans/: initial-setup.md
src/modules/agent/: __init__.py  orchestrator.py
src/modules/data/: db.py  information_collector.py  models.py
src/modules/shared/: config.py  utils.py
src/modules/telegram_bot/: bot.py  handlers.py  main.py
src/modules/trading/: kis_api.py  order_manager.py  portfolio.py
tests/integration/: test_kis_api_integration.py
tests/unit/: test_config.py  test_db.py  test_information_collector.py  test_kis_api.py  test_models.py  test_order_manager.py  test_portfolio.py  test_telegram_bot.py  test_utils.py
